<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home_text"/>

    <item
        android:id="@+id/nav_top_rated"
        android:icon="@drawable/ic_top_rated"
        android:title="@string/nav_top_rated"/>


    <item
        android:id="@+id/nav_upcoming"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/nav_upcoming"/>

    <item
        android:id="@+id/nav_now_playing"
        android:icon="@drawable/ic_now_playing"
        android:title="@string/nav_now_playing"/>

    <item
        android:id="@+id/nav_saved"
        android:icon="@drawable/ic_saved"
        android:title="@string/nav_saved"/>


</menu>